--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   provider: ^6.1.5+1
   image_picker: ^1.2.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,6 @@ flutter:
   assets:
     - assets/
     - assets/images/
-    - assets/others/
     - assets/images/todoroki.png
   #   - images/a_dot_ham.jpeg
 
